--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
-    <title>CarApp</title>
+    <title>CarSite</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
@@ -15,6 +15,9 @@
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    <!-- <script
+      src="https://kit.fontawesome.com/2e8b6eae68.js"
+      crossorigin="anonymous"></script> -->
   </head>
   <body [class]="themeService.getActiveTheme()">
     <app-root></app-root>
